--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,4 +107,4 @@ dependencies {
     compile 'com.tencent.bugly:crashreport_upgrade:1.3.1'
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
 }
-apply from: 'tinker-support.gradle'
+//apply from: 'tinker-support.gradle'
