--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,10 +101,12 @@ dependencies {
         api project(':live')
         annotationProcessor rootProject.ext.dependencies.arouter_compiler
     }
+
     implementation project(':commonlibrary')
     testImplementation 'junit:junit:4.12'
     //注释掉原有bugly的仓库
     compile 'com.tencent.bugly:crashreport_upgrade:1.3.1'
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
 }
-apply from: 'tinker-support.gradle'
+
+//apply from: 'tinker-support.gradle'
