--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':music', ':commonlibrary', ':app', ':skin', ':live', ':news', ':chat'
+include ':music', ':commonlibrary', ':app', ':skin', ':live', ':news', ':chat', ':manager'
