[fix]修复状态栏、音乐模块等bug

--- a/live/src/main/module/AndroidManifest.xml
+++ b/live/src/main/module/AndroidManifest.xml
@@ -27,11 +27,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.MainActivity"
+        <activity android:name=".mvp.main.MainActivity"
             />
 
-        <activity android:name=".ui.SearchLiveActivity"/>
-        <activity android:name=".ui.VideoActivity"
+        <activity android:name=".mvp.search.SearchLiveActivity"/>
+        <activity android:name=".mvp.video.VideoActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:windowSoftInputMode="stateHidden|stateUnchanged" />
 
