--- a/live/src/main/AndroidManifest.xml
+++ b/live/src/main/AndroidManifest.xml
@@ -17,9 +17,9 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-        <activity android:name=".ui.MainActivity"/>
-        <activity android:name=".ui.SearchLiveActivity"/>
-        <activity android:name=".ui.VideoActivity"
+        <activity android:name=".mvp.main.MainActivity"/>
+        <activity android:name=".mvp.search.SearchLiveActivity"/>
+        <activity android:name=".mvp.video.VideoActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:windowSoftInputMode="stateHidden|stateUnchanged" />
         <meta-data
