--- a/video/src/main/AndroidManifest.xml
+++ b/video/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity
             android:name=".mvp.qq.detail.QQVideoDetailActivity"
             android:configChanges="orientation|keyboardHidden|screenSize" />
+        <activity android:name=".mvp.search.SearchVideoActivity" />
     </application>
 
 </manifest>
