--- a/commonlibrary/build.gradle
+++ b/commonlibrary/build.gradle
@@ -149,6 +149,11 @@ dependencies {
     implementation 'com.meituan.android.walle:library:1.1.6'
     implementation 'com.github.bumptech.glide:annotations:4.8.0'
     implementation files('libs/pinyin4j-2.5.0.jar')
+
+    api files('libs/rxandroid-1.2.0.jar')
+    api files('libs/rxjava-1.1.6.jar')
+    api files('libs/BmobSDK_3.5.8_20171013.jar')
+    api files('libs/Bmob_Push_1.0.1_20170907.jar')
 }
 
 
