--- a/commonlibrary/build.gradle
+++ b/commonlibrary/build.gradle
@@ -135,6 +135,10 @@ dependencies {
         exclude module: 'okio'
 
     }
+    api ('org.jsoup:jsoup:1.10.1'){
+        exclude module:"appcompat-v7"
+        exclude module:"support-v4"
+    }
 
     api 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
 //    compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.3'
