--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@ buildscript {
 //        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath "com.tencent.bugly:tinker-support:1.1.1"
 
-        
+        //        Walle 打包
+        classpath 'com.meituan.android.walle:plugin:1.1.6'
         classpath "com.tinkerpatch.sdk:tinkerpatch-gradle-plugin:1.1.8"
 
 
