--- a/music/src/main/module/AndroidManifest.xml
+++ b/music/src/main/module/AndroidManifest.xml
@@ -34,7 +34,7 @@
 
 
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".mvp.main.MainActivity"
             android:launchMode="singleTask" />
 
 
