[fix&feature]修复后台管理模块部分bug和添加用户协议

--- a/chat/src/main/AndroidManifest.xml
+++ b/chat/src/main/AndroidManifest.xml
@@ -99,6 +99,7 @@
         <activity android:name=".mvp.feedback.ChatListActivity" />
         <activity android:name=".mvp.about.AboutActivity" />
         <activity android:name=".mvp.developer.DeveloperInfoActivity" />
+        <activity android:name=".mvp.about.protocol.ProtocolActivity" />
 
 
         <intent-filter>
