--- a/chat/src/main/module/AndroidManifest.xml
+++ b/chat/src/main/module/AndroidManifest.xml
@@ -90,6 +90,7 @@
         <activity android:name=".mvp.photoSelect.PhotoSelectActivity"/>
         <activity android:name=".mvp.preview.PhotoPreViewActivity"/>
         <activity android:name=".mvp.EditShare.EditShareInfoActivity"/>
+        <activity android:name=".mvp.about.protocol.ProtocolActivity"/>
 
 
         <!--高德地图API_KEY-->
