--- a/config.gradle
+++ b/config.gradle
@@ -37,7 +37,7 @@ ext {
             rxjava_adapter = "2.3.0",
             gson_converter = "2.3.0",
             scalars_converter = "2.3.0",
-            rxpermission = "0.9.4",
+            rxpermission = "0.10.2",
             eventbus = "3.0.0",
             support_v4 = "25.4.0",
             okhttp3 = "3.3.1",
@@ -68,7 +68,7 @@ ext {
             retrofit_adapter_rxjava2  : "com.squareup.retrofit2:adapter-rxjava2:$rootProject.rxjava_adapter",
             retrofit_converter_gson   : "com.squareup.retrofit2:converter-gson:$rootProject.gson_converter",
             retrofit_converter_scalars: "com.squareup.retrofit2:converter-scalars:$rootProject.scalars_converter",
-            rxpermission              : "com.tbruyelle.rxpermissions2:rxpermissions:$rootProject.rxpermission@aar",
+            rxpermission              : "com.github.tbruyelle:rxpermissions:$rootProject.rxpermission",
             rxjava2                   : "io.reactivex.rxjava2:rxjava:$rootProject.rxjava",
             rxjava2_android           : "io.reactivex.rxjava2:rxandroid:$rootProject.rxjava_android",
             rxlifecycle2              : "com.trello.rxlifecycle3:rxlifecycle:$rootProject.rxlifecycle",
