--- a/config.gradle
+++ b/config.gradle
@@ -1,7 +1,7 @@
 ext {
 
 
-    isAlone = true;//false:作为Lib组件存在， true:作为application存在
+    isAlone = false;//false:作为Lib组件存在， true:作为application存在
 
     android = [
 
