[fix]适配全面屏

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,10 @@
 
         </activity>
 
-
+        <meta-data
+            android:name="android.max_aspect"
+            android:value="2.1"
+            />
     </application>
 
 </manifest>
